[gd_scene load_steps=11 format=3 uid="uid://bp2r8x5mqayf3"]

[ext_resource type="LabelSettings" uid="uid://bb2u8lhx0w2up" path="res://fonts/batcity_settings.tres" id="1_7bb10"]
[ext_resource type="Script" uid="uid://dfjgsmqno4ggb" path="res://scenes/hud/results_screen.gd" id="1_ib3yp"]
[ext_resource type="LabelSettings" uid="uid://bfp775vrse8n5" path="res://fonts/batcity_settings_small.tres" id="2_ib3yp"]
[ext_resource type="PackedScene" uid="uid://8ybwg7u5nse7" path="res://scenes/hud/player_panel.tscn" id="3_ib3yp"]
[ext_resource type="Texture2D" uid="uid://dfoj8aoudulaq" path="res://sprites/game_over_screen.png" id="5_wx02c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ib3yp"]

[sub_resource type="Animation" id="Animation_3wyno"]
length = 0.001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopColor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -128)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottonColor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 256)]
}

[sub_resource type="Animation" id="Animation_ib3yp"]
resource_name = "close"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopColor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -128), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottonColor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 256), Vector2(0, 128)]
}

[sub_resource type="Animation" id="Animation_wx02c"]
resource_name = "open"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopColor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -128)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottonColor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 128), Vector2(0, 256)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wx02c"]
_data = {
&"RESET": SubResource("Animation_3wyno"),
&"close": SubResource("Animation_ib3yp"),
&"open": SubResource("Animation_wx02c")
}

[node name="Results Screen" type="CanvasLayer"]
script = ExtResource("1_ib3yp")

[node name="Results" type="Node2D" parent="."]
visible = false

[node name="BgColor" type="ColorRect" parent="Results"]
offset_right = 336.0
offset_bottom = 256.0
color = Color(0, 0, 0, 1)

[node name="Title" type="Label" parent="Results"]
offset_top = 16.0
offset_right = 336.0
offset_bottom = 34.0
text = "RESULTS"
label_settings = ExtResource("1_7bb10")
horizontal_alignment = 1
vertical_alignment = 2

[node name="LevelName" type="Label" parent="Results"]
offset_top = 40.0
offset_right = 336.0
offset_bottom = 48.0
text = "LEVEL 0"
label_settings = ExtResource("2_ib3yp")
horizontal_alignment = 1

[node name="Total Score" type="Label" parent="Results"]
offset_top = 232.0
offset_right = 336.0
offset_bottom = 240.0
text = "TOTAL SCORE: 000000"
label_settings = ExtResource("2_ib3yp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Results"]
offset_top = 56.0
offset_right = 336.0
offset_bottom = 232.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_ib3yp")

[node name="HBoxContainer" type="HBoxContainer" parent="Results/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 80

[node name="Player1" parent="Results/PanelContainer/HBoxContainer" instance=ExtResource("3_ib3yp")]
layout_mode = 2

[node name="Player2" parent="Results/PanelContainer/HBoxContainer" instance=ExtResource("3_ib3yp")]
visible = false
layout_mode = 2

[node name="Player3" parent="Results/PanelContainer/HBoxContainer" instance=ExtResource("3_ib3yp")]
visible = false
layout_mode = 2

[node name="Player4" parent="Results/PanelContainer/HBoxContainer" instance=ExtResource("3_ib3yp")]
visible = false
layout_mode = 2

[node name="GameOverScreen" type="Sprite2D" parent="."]
visible = false
position = Vector2(168, 128)
scale = Vector2(1.3124999, 1.1428572)
texture = ExtResource("5_wx02c")

[node name="TopColor" type="ColorRect" parent="."]
offset_top = -128.0
offset_right = 336.0
color = Color(0, 0, 0, 1)

[node name="BottonColor" type="ColorRect" parent="."]
offset_top = 256.0
offset_right = 336.0
offset_bottom = 383.99997
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wx02c")
}

[node name="FinishTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="countdown_finished" from="Results/PanelContainer/HBoxContainer/Player1" to="." method="_countdown_finished"]
[connection signal="countdown_finished" from="Results/PanelContainer/HBoxContainer/Player2" to="." method="_countdown_finished"]
[connection signal="countdown_finished" from="Results/PanelContainer/HBoxContainer/Player3" to="." method="_countdown_finished"]
[connection signal="countdown_finished" from="Results/PanelContainer/HBoxContainer/Player4" to="." method="_countdown_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="timeout" from="FinishTimer" to="." method="finish_result_screen"]
